styles/main.css
/* ... */
body.framePage #workarea {
  border: none;
}

img {
  border: none;
}
li {
  list-style-position: inside;
}
table {
  empty-cells: show;
}

div.fixFloat {
  height: 0;
  line-height: 0;
  clear: both;
  overflow: hidden;
  border: none;
}
div.fixLine {
  font-size: 1px;
}
span.allowWrap {
  font-size: 1px;
  width: 1px;
}

.nonGraphicBrowser {
  display: none;
  visibility: hidden;
}

/* icons */
img.dialogIconLarge {
  width: 48px;
  height: 48px;
  margin: 20px;
  float: left;
}

span.glyphGroup img {
  margin-right: 0.5em;
  margin-left: 0.5em;
}
img.glyph16 {
  width: 16px;
  height: 16px;
  vertical-align: middle;
}
img.glyph22 {
  width: 22px;
  height: 22px;
  vertical-align: middle;
}
img.glyph48 {
  width: 48px;
  height: 48px;
  vertical-align: middle;
}

/* header */
#title {
  position: relative;
  color: /*$header.color*/ #FFFFFF;
  font-weight: bold;
  font-size: 18px;
  border-bottom: 1px solid /*$window.background-color*/ #FFFFFF;
  background-color: /*$header.background-color*/ #9EAB2D;
  background: linear-gradient(
    to bottom,
    /*$header.gradient-top.background-color*/ #AEBA51,
    /*$header.gradient-top.background-color*/#AEBA51 50%,
    /*$header.gradient-bottom.background-color*/#A0AE32 50%,
    /*$header.gradient-bottom.background-color*/#A0AE32
  );
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  min-height: 40px;
}
#title .artworkLeft,
#title .artworkRight,
#title .artworkOverlay {
  position: absolute;
  top: 0;
  overflow: hidden;
  height: 100%;
}
#title .artworkLeft {
  left: 0;
  border-top-left-radius: 20px;
}
#title .artworkRight {
  right: 0;
  border-top-right-radius: 20px;
}
#title .artworkRight path,
#title .artworkLeft path {
  fill: /*$header.artwork.background-color*/ #FFFFFF;
  opacity: /*$header.artwork.opacity*/ 0.2;
}
#title .artworkOverlay {
  left: 0;
  right: 0;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}
#title .artworkOverlay #dots rect {
  fill: /*$header.artwork.background-color*/ #FFFFFF;
  opacity: /*$header.artwork.opacity*/ 0.2;
}
#title .papayaLogo {
  width: 100px;
  height: 30px;
  border: none;
  float: left;
  margin: 4px 100px 0 4px;
}
#title .papayaLogo path {
  fill: #FFFFFF;
}
#title .pageLogo {
 width: 22px;
 height: 22px;
 float: left;
 margin: 8px 10px 0 20px;
}
#titleButtons {
  float: right;
  padding: 8px 10px 0 10px;
  line-height: 22px;
}
#titleButtons img {
  border: none;
  margin: 0;
  margin-left: 10px;
}
#titleText {
  font-size: 18px;
  -moz-opacity: 0.8;
  opacity: 0.8;
  margin: 0;
  padding: 0;
  padding-top: 8px;
  margin-right: 100px;
}

/* local page navigation */
#pageNavigation {
  display: none;
  visibility: hidden;
}
a.pageNavigation {
  display: none;
  visibility: hidden;
}

/* footer bar */
#footer {
  background-color: /*$footer.background-color*/ #9EAB2D;
  color: /*$footer.color*/ #FFFFFF;
  font-weight: bold;
  font-size: 10px;
  text-align: right;
  border-top: 1px solid /*$window.background-color*/ #FFFFFF;
  border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px;
  position: relative;
  padding: 6px;
  min-height: 20px;
}
#footer .artworkOverlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
}
#footer .versionString {
  padding-right: 20px;
}
#footer .projectString {
  float: left;
}
#footer a {
  color: /*$footer.color*/ #FFFFFF;
  text-decoration: none;
}

/* title menu bar */
#titleMenu {
  background-color: /*$subtitle.background-color*/ #A09E98;
  background: linear-gradient(
    to bottom,
    /*$subtitle.gradient-top.background-color*/ #CBCBCB,
    /*$subtitle.gradient-bottom.background-color*/#A09E98
  );
  color: /*$subtitle.color*/ #555753;
  text-align: left;
  font-size: 10px;
  padding: 2px 5px;
  line-height: 20px;
  font-weight: bold;
}
#titleMenu ul.links {
  display: inline;
  list-style-type: none;
  margin: 0;
  padding: 0;
  line-height: 20px;
}
#titleMenu ul.links li {
  display: inline;
  list-style-type: none;
  margin: 0;
  padding: 0;
  line-height: 20px;
  border-left: 1px solid /*$subtitle.color*/ #555753;
  padding-left: 5px;
}
#titleMenu ul.links li.caption,
#titleMenu ul.links li.selected {
  border: none;
  padding: 0;
}
#titleMenu ul.links li img {
  vertical-align: middle;
  display: inline;
  margin-bottom: 1px;
  -moz-opacity: 0.4;
  opacity: 0.4;
}
#titleMenu ul.links li.caption img,
#titleMenu ul.links li.selected img,
#titleMenu ul.links li:hover img {
  -moz-opacity: 1;
  opacity: 1;
}
#titleMenu ul.rightLinks {
  float: right;
  list-style-type: none;
  margin: 0;
  padding: 0;
  padding-right: 5px;
  line-height: 20px;
}
#titleMenu ul.rightLinks li {
  display: inline;
  margin-left: 5px;
  line-height: 20px;
}
#titleMenu ul.rightLinks li a {
  border: 1px solid #000000;
  padding: 2px 8px;
}
#titleMenu ul.rightLinks li.selected a {
  background-color: /*$highlight.background-color*/ #9EAB2D;
  color: /*$highlight.color*/ #FFFFFF;
}
#titleMenu ul.rightLinks li.caption {
  border: none;
}
#titleMenu .user {
  font-weight: bold;
}
#titleMenu a {
  color: /*$subtitle.color*/ #555753;
  text-decoration: none;
}

/* menu bar */
#pageMenuBar {
  background-color: /*$workarea.background-color*/ #EAE9E6;
  clear: both;
  min-width: 970px;
}
div.toolBar {
  background-color: /*$workarea.background-color*/ #EAE9E6;
  border: 1px solid /*$border.inset.color*/ #BBB9B0;
  border-bottom: 1px solid /*$border.raised.color*/ #FFFFFF;
  border-right: 1px solid /*$border.raised.color*/ #FFFFFF;
  margin-bottom: 10px;
}
div.menuBar {
  border-top: 1px solid /*$border.raised.color*/ #FFFFFF;
  border-bottom: 1px solid /*$border.inset.color*/ #BBB9B0;
  clear: both;
}
div.toolBar div.menuBar {
  border: 1px solid /*$border.raised.color*/ #FFFFFF;
  border-bottom: 1px solid /*$border.inset.color*/ #BBB9B0;
  border-right: 1px solid /*$border.inset.color*/ #BBB9B0;
}
div.menuBar ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: block;
}
/* ... */

